[package]
name = "htmxpress"
version = "0.0.0"
edition = "2021"
authors = ["biblius <crazycompanyxxl@gmail.com>"]
description = "Procedural macros for generating htmx strings"
homepage = "https://github.com/biblius/htmxpress"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmxpress_macros = { path = "../htmxpress_macros" }
http = "1.0.0"
urlencoding = { version = "2.1.3", optional = true }
#htmxpress_macros = "0.0.0"

[features]
default = ["full"]
full = ["urlencoding"]
urlencoding = ["dep:urlencoding"]
